# snc

./: .gitignore  CMakeLists.txt  README.md
docs/: DISCUSSION_CONSCIOUSNESS.md  MORPHOLOGY_REFACTOR.md  README.md  ROADMAP.md  architecture.md  brain-model.md  developmental-multicenter-snc.md  experiments-mnist.md  experiments-shd.md  llm-direction.md  new-plan.md  nursery-consolidation.md  nursery-navigation.md  nursery-permanence.md  nursery-structural-consolidation.md  nursery-v1.md  related-work.md  structural-advantage.md  three-factor-reward.md  voxel-encoding.md
docs/figures/: render_figures.py
include/: brain_grid.hpp  energy_field.hpp  neuron.hpp  simulator.hpp
include/snc/: connectome.hpp  cuda_trainer.hpp  dataset.hpp  encoders.hpp  runtime.hpp  snn_graph.hpp  trainer.hpp
python/: README.md  train.py  train_lm.py  train_nursery.py  train_shd.py
python/dev_snc/: __init__.py  agent.py  centers.py  experiment.py  memory.py  navigation.py  nursery.py  plasticity.py  selftest.py  tasks.py
python/snc/: __init__.py  data.py  graph.py  lm.py  model.py  shd.py  shd_model.py
scripts/: aggregate_bptt.py  aggregate_depth.py  aggregate_study.py  animate_cortical_map.py  fetch_mnist.sh  fetch_shd.sh  fetch_ssc.sh  plot_cortical_map.py  plot_dev_curve.py  plot_dev_summary.py  plot_grid_3d.py  prep_mnist.py  quiz_numbers.py  render_neuron.py  run_bptt_sweep.sh  run_depth_sweep.sh  run_lifetime.py  run_mnist.py  run_mnist_study.sh
src/: aversive_demo.cpp  brain_grid.cpp  chat_demo.cpp  energy_field.cpp  learn_demo.cpp  main.cpp  mom_dad_demo.cpp  simulator.cpp  test_stdp.cpp  vocab_demo.cpp
src/bench/: snc_bench.cpp  snc_export.cpp
src/graph/: snn_graph.cpp
src/runtime/: cpu_backend.cpp  cuda_backend.cu  cuda_stub.cpp
src/structure/: connectome.cpp
src/training/: cotrain_main.cpp  cuda_trainer.cu  cuda_trainer_stub.cpp  datasets.cpp  encoders.cpp  train_main.cpp  trainer.cpp
